--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script type="module" src="main.js"></script>
     <script type="module" src="menu.js"></script>
     <script type="module" src="scene_1.js"></script>
-    
+    <script type="module" src="scene_2.js"></script>
 
 </head>
 
