--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <script type="module" src="scene_1.js"></script>
     <script type="module" src="scene_2.js"></script>
     <script type="module" src="scene_3.js"></script>
+    <script type="module" src="scene_4.js"></script>
+
 
 
 </head>
