--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script type="module" src="scene_2.js"></script>
     <script type="module" src="scene_3.js"></script>
     <script type="module" src="scene_4.js"></script>
-
+    <script type="module" src="scene_5.js"></script>
 
 
 </head>
